--- a/geostats/src/main/res/layout-large/vp_oceania_population.xml
+++ b/geostats/src/main/res/layout-large/vp_oceania_population.xml
@@ -36,9 +36,8 @@
 			 </TableRow>
 		</TableLayout>
 		
-		<TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+		<TextView
+            style="@style/TextViewTitle"
             android:text="@string/MostPopulatedCountries"/>
 		
 		<include layout="@layout/inc_oceania_population"/>
