--- a/geostats/src/main/res/layout-large/vp_africa_population.xml
+++ b/geostats/src/main/res/layout-large/vp_africa_population.xml
@@ -2,7 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/ScrollView">
-	<LinearLayout 
+	<LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -36,9 +36,8 @@
 			 </TableRow>
 		</TableLayout>
 		
-		<TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+		<TextView
+            style="@style/TextViewTitle"
             android:text="@string/MostPopulatedCountries"/>
 		
 		<include layout="@layout/inc_africa_population"/>
