--- a/geostats/src/main/res/layout-large/vp_europe_mountains.xml
+++ b/geostats/src/main/res/layout-large/vp_europe_mountains.xml
@@ -43,16 +43,14 @@
 		    </TableRow>
 		</TableLayout>
 		
-		<TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+		<TextView
+            style="@style/TextViewTitle"
             android:text="@string/BoundaryKMD"/>
 		
 		<include layout="@layout/inc_europe_mountains_kmd"/>
 		
-		<TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+		<TextView
+            style="@style/TextViewTitle"
             android:text="@string/BoundaryCC"/>
 		
 		<include layout="@layout/inc_europe_mountains_cc"/>
