--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -40,7 +40,10 @@
         <item name="vpiTabPageIndicatorStyle">@style/MyTabPageIndicator</item>
         <item name="android:actionBarTabStyle">@style/MyActionBarTabs</item>
         <item name="android:actionBarTabBarStyle">@style/MyActionBarTabBar</item>
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:actionBarStyle">@style/MyActionBarV4</item>
+        <item name="android:actionBarTabTextStyle">@style/MyActionBarTabTextStyle</item>
+        <item name="android:homeAsUpIndicator">@drawable/my_abc_ic_ab_back_holo_light</item>
+        <item name="android:actionBarItemBackground">@drawable/bg_actionbar_tabview_pattern</item>
 
         <!-- Support library compatibility -->
         <item name="actionBarStyle">@style/MyActionBar</item>
@@ -53,6 +56,10 @@
     <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">
         <item name="background">@drawable/bg_actionbar_unselected</item>
         <item name="titleTextStyle">@style/MyActionBarTitleText</item>
+    </style>
+    <style name="MyActionBarV4" parent="@style/Widget.AppCompat.ActionBar"> <!-- styles for versions 4.0+ -->
+        <item name="android:background">@drawable/bg_actionbar_unselected</item>
+        <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
     </style>
     <style name="MyActionBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionMode.Title">
         <item name="android:textColor">@color/colorDarkGrey</item>
@@ -83,6 +90,8 @@
         <item name="android:paddingLeft">17dip</item>
         <item name="android:paddingRight">17dip</item>
         <item name="android:layout_margin">0dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
     </style>
     <style name="FrameLayoutBody">
         <item name="android:padding">12dp</item>
@@ -186,6 +195,7 @@
         <item name="android:background">@drawable/table_button</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:gravity">center|right</item>
 
     </style>
@@ -304,11 +314,12 @@
         <item name="android:layout_marginTop">6dp</item>
         <item name="android:layout_marginBottom">6dp</item>
     </style>
-   <style name="MainButtons.Sub" parent="MainButtons">
+   <style name="MainButtons.Sub">
        <item name="android:paddingTop">8dp</item>
        <item name="android:paddingBottom">8dp</item>
        <item name="android:layout_marginTop">8dp</item>
        <item name="android:layout_marginRight">8dp</item>
+       <item name="android:textSize">14sp</item>
    </style>
     <style name="FragmentButtons" parent="MainButtons.Sub">
         <item name="android:paddingTop">14dp</item>
