--- a/geostats/src/main/res/layout-large/fragment_continent.xml
+++ b/geostats/src/main/res/layout-large/fragment_continent.xml
@@ -11,8 +11,18 @@
         android:padding="12dp"
         android:layout_weight="@string/layoutWeightFragmentALarge">
 
-	    <include layout="@layout/inc_fragment_buttons"/>
-        
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                style="@style/ImageViewMapBasicLand"
+                android:id="@+id/ivMapBasic"/>
+
+            <include layout="@layout/inc_fragment_buttons"/>
+
+        </RelativeLayout>
+
 	</LinearLayout>
 	<LinearLayout 
         android:layout_width="fill_parent"
