--- a/geostats/src/main/res/layout/inc_viewpager.xml
+++ b/geostats/src/main/res/layout/inc_viewpager.xml
@@ -5,6 +5,8 @@
         android:paddingRight="2dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
         />
     
     <android.support.v4.view.ViewPager
