--- a/geostats/src/main/res/layout-large-land/fragment_continent.xml
+++ b/geostats/src/main/res/layout-large-land/fragment_continent.xml
@@ -6,12 +6,12 @@
     android:baselineAligned="true"
     android:orientation="horizontal" >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
+    <RelativeLayout
+        android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:paddingTop="12dp"
         android:paddingLeft="12dp"
-        android:paddingRight="10dp"
+        android:paddingRight="0dp"
         android:paddingBottom="12dp"
         android:layout_weight="@string/layoutWeightFragmentALargeLand">
 
@@ -21,13 +21,15 @@
 
         <include layout="@layout/inc_fragment_buttons"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:paddingTop="12dp"
-        android:layout_weight="@string/layoutWeightFragmentBLargeLand">
+        android:paddingRight="1dp"
+        android:layout_weight="@string/layoutWeightFragmentBLargeLand"
+        android:orientation="vertical">
 
         <include layout="@layout/inc_viewpager"/>
 
