--- a/geostats/src/main/res/layout-large-land/fragment_ocean.xml
+++ b/geostats/src/main/res/layout-large-land/fragment_ocean.xml
@@ -3,33 +3,36 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:weightSum="10"
-    android:orientation="vertical">
-    
-    <LinearLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:padding="12dp"
+    android:baselineAligned="true"
+    android:orientation="horizontal" >
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:paddingTop="12dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="12dp"
         android:layout_weight="@string/layoutWeightFragmentALargeLand">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <ImageView
+            style="@style/ImageViewMapBasicLand"
+            android:id="@+id/ivMapBasic"/>
 
-            <ImageView
-                style="@style/ImageViewMapBasicLand"
-                android:id="@+id/ivMapBasic"/>
+        <include layout="@layout/inc_fragment_buttons"/>
 
-	        <include layout="@layout/inc_fragment_buttons"/>
-        </RelativeLayout>
-        
-	</LinearLayout>
-	<LinearLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:paddingTop="12dp"
+        android:paddingRight="1dp"
         android:layout_weight="@string/layoutWeightFragmentBLargeLand"
         android:orientation="vertical">
-    
-    	<include layout="@layout/inc_viewpager"/>
-    	
-	</LinearLayout>
+
+        <include layout="@layout/inc_viewpager"/>
+
+    </LinearLayout>
+
 </LinearLayout>
