--- a/geostats/src/main/res/layout-large/fragment_continent.xml
+++ b/geostats/src/main/res/layout-large/fragment_continent.xml
@@ -28,6 +28,8 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="@string/layoutWeightFragmentBLarge"
+        android:paddingLeft="1dp"
+        android:paddingRight="1dp"
         android:orientation="vertical">
     
     	<include layout="@layout/inc_viewpager"/>
