--- a/geostats/src/main/res/layout/indicators_record_detail.xml
+++ b/geostats/src/main/res/layout/indicators_record_detail.xml
@@ -7,7 +7,13 @@
     
     <TextView 
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:drawableLeft="@drawable/navigation_back"
+        android:layout_gravity="center"
+        android:drawablePadding="3dp"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:textColor="@color/colorDarkGrey"
         android:text="@string/IndicatorsIntroText"/>
     
  </LinearLayout>
