--- a/geostats/src/main/res/layout-land/dialog_asia_maps.xml
+++ b/geostats/src/main/res/layout-land/dialog_asia_maps.xml
@@ -9,35 +9,41 @@
         <TextView
             style="@style/DialogTitle"
             android:text="@string/Asia"
+            android:paddingRight="10dp"
             android:id="@+id/dTitle"/>
 
         <Button
             style="@style/ButCloseDialog"
             android:id="@+id/btClose"/>
 
-        <Button
-            style="@style/FragmentButtons.SmallPadding"
+        <RadioGroup
             android:layout_toRightOf="@id/dTitle"
-            android:layout_marginTop="6dp"
-            android:text="@string/PhysicalMap"
-            android:id="@+id/btMap1"/>
+            style="@style/RadioGroupMap"
+            android:id="@+id/rgMap">
 
-        <Button
-            style="@style/FragmentButtons.SmallPadding"
-            android:layout_toRightOf="@id/btMap1"
-            android:layout_marginTop="6dp"
-            android:text="@string/MiddleEastPhysical"
-            android:id="@+id/btMap2"/>
+            <RadioButton
+                android:id="@+id/rbMap1"
+                style="@style/RadioButtonMap"
+                android:checked="true"
+                android:text="@string/PhysicalMap"/>
+            <RadioButton
+                style="@style/RadioButtonMap"
+                android:id="@+id/rbMap2"
+                android:layout_marginLeft="8dp"
+                android:singleLine="true"
+                android:text="@string/MiddleEastPhysical"/>
+
+        </RadioGroup>
 
         <ImageView
             android:id="@+id/ivMap"
             style="@style/ImageViewMap"
-            android:layout_below="@+id/btMap1"
+            android:layout_below="@+id/rgMap"
             android:contentDescription="@string/Asia"/>
 
         <TextView
             style="@style/DialogChartNo.Inverse"
-            android:layout_below="@+id/btMap1"
+            android:layout_below="@+id/rgMap"
             android:id="@+id/imageNo"
             android:text="@string/ImageAsiaPhysical"/>
 
