--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -272,29 +272,27 @@
         <item name="android:layout_marginRight">2dp</item>
         <item name="android:background">@drawable/dialog_close</item>
     </style>
+    <style name="RadioGroupMap">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:paddingLeft">6dp</item>
+    </style>
+    <style name="RadioButtonMap">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
     <style name="ImageViewMap">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:background">@color/colorFFF</item>
         <item name="android:scaleType">matrix</item>
     </style>
-    <style name="ImageViewMap.Land">
-        <item name="android:layout_marginTop">6dp</item>
-    </style>
     <style name="ImageViewMapBasicLand">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:scaleType">centerCrop</item>
-    </style>
-    <style name="ImageViewMapLarge">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:scaleType">centerInside</item>
-    </style>
-    <style name="ImageViewMapLandLarge">
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
-        <item name="android:scaleType">centerInside</item>
     </style>
     <style name="MainButtons">
         <item name="android:layout_width">wrap_content</item>
