--- a/geostats/src/main/res/layout/inc_asia_countries.xml
+++ b/geostats/src/main/res/layout/inc_asia_countries.xml
@@ -96,7 +96,7 @@
                 android:id="@+id/chartNo"
                 android:layout_span="2"
                 style="@style/TableTextView.Italic"
-                android:text="@string/ChartNo"/>
+                android:text="@string/ChartAsiaLargestCountries"/>
         </TableRow>
     </TableLayout>
 </merge>
